Revamp PostSyncer documentation: updated titles and descriptions for clarity, restructured API integration guide, added detailed steps for account setup and social media connection, and enhanced content organization sections. Removed legacy files and updated logo assets.

--- a/api-reference/accounts/delete.mdx
+++ b/api-reference/accounts/delete.mdx
@@ -6,7 +6,7 @@ description: 'Delete a social media account'
 
 ## Delete Account
 
-Permanently deletes a social media account connection. This will revoke PostMaster's access to the account, and any scheduled posts for this account will be cancelled.
+Permanently deletes a social media account connection. This will revoke PostSyncer's access to the account, and any scheduled posts for this account will be cancelled.
 
 ### Request
 
