--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,15 +1,15 @@
 ---
-title: 'PostMaster API'
+title: 'PostSyncer API'
 description: 'Powerful API for managing your social media scheduling'
 ---
 
-## Welcome to PostMaster API
+## Welcome to PostSyncer API
 
-PostMaster offers a powerful RESTful API that allows you to programmatically manage your social media scheduling workflows. With our API, you can create, update, and delete posts, manage social media accounts, organize content with campaigns and labels, and automate your social media strategy across multiple platforms.
+PostSyncer offers a powerful RESTful API that allows you to programmatically manage your social media scheduling workflows. With our API, you can create, update, and delete posts, manage social media accounts, organize content with campaigns and labels, and automate your social media strategy across multiple platforms.
 
 ## Supported Platforms
 
-PostMaster supports scheduling and publishing content to the following social media platforms:
+PostSyncer supports scheduling and publishing content to the following social media platforms:
 
 - Twitter / X
 - Facebook
@@ -28,15 +28,15 @@ Our API is versioned to ensure backward compatibility as we continue to improve 
 
 | Version | Status | Base URL |
 |---------|--------|----------|
-| v1      | Current | `https://app.postmaster.io/api/v1` |
+| v1      | Current | `https://app.postsyncer.com/api/v1` |
 
 ## Authentication
 
-All API requests must be authenticated using a Bearer token. You can generate API tokens from your PostMaster account.
+All API requests must be authenticated using a Bearer token. You can generate API tokens from your PostSyncer account.
 
 ### Generating API Tokens
 
-1. Log in to your PostMaster account
+1. Log in to your PostSyncer account
 2. Navigate to your Account Profile
 3. Scroll down to the "API Tokens" section
 4. Click "Create Token"
@@ -62,7 +62,7 @@ Authorization: Bearer YOUR_API_TOKEN
 ```
 
 <Warning>
-  Keep your API tokens secure! They grant access to your PostMaster account and should be treated like passwords. Never share your tokens publicly or commit them to version control.
+  Keep your API tokens secure! They grant access to your PostSyncer account and should be treated like passwords. Never share your tokens publicly or commit them to version control.
 </Warning>
 
 ## Rate Limiting
