--- a/api-reference/posts/create.mdx
+++ b/api-reference/posts/create.mdx
@@ -206,7 +206,7 @@ Creates a new post that can be scheduled or published immediately across multipl
 
 ### Media Guidelines
 
-Different social platforms have different requirements for media. PostMaster will automatically process your media to meet platform requirements, but keep these limitations in mind:
+Different social platforms have different requirements for media. PostSyncer will automatically process your media to meet platform requirements, but keep these limitations in mind:
 
 | Platform | Max Images | Max Videos | Required Media | Max File Size |
 |----------|------------|------------|---------------|---------------|
