--- a/api-reference/posts/list.mdx
+++ b/api-reference/posts/list.mdx
@@ -67,10 +67,10 @@ Retrieves a paginated list of all your posts across your active workspaces. Post
     }
   ],
   "links": {
-    "first": "https://app.postmaster.io/api/v1/posts?page=1",
-    "last": "https://app.postmaster.io/api/v1/posts?page=5",
+    "first": "https://app.postsyncer.com/api/v1/posts?page=1",
+    "last": "https://app.postsyncer.com/api/v1/posts?page=5",
     "prev": null,
-    "next": "https://app.postmaster.io/api/v1/posts?page=2"
+    "next": "https://app.postsyncer.com/api/v1/posts?page=2"
   },
   "meta": {
     "current_page": 1,
