--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,72 +1,97 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Welcome to PostSyncer
+description: "The most powerful social media scheduling platform for creators and businesses"
 ---
 
 <img
   className="block dark:hidden"
   src="/images/hero-light.png"
-  alt="Hero Light"
+  alt="PostSyncer Dashboard"
 />
 <img
   className="hidden dark:block"
   src="/images/hero-dark.png"
-  alt="Hero Dark"
+  alt="PostSyncer Dashboard"
 />
 
-## Setting up
+## Streamline Your Social Media Strategy
 
-The first step to world-class documentation is setting up your editing environments.
-Loos Cool
-
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+PostSyncer helps you create, schedule, and analyze your social media content across multiple platforms from one central dashboard. With support for 10 major social networks and powerful automation features, you can save time while maximizing your social media impact.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Get Started"
+    icon="rocket"
+    href="/quickstart"
   >
-    Customize your docs to your company's colors and brands
+    Set up your PostSyncer account and connect your first social platform in minutes
   </Card>
   <Card
-    title="Reference APIs"
+    title="Explore the API"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="/api-reference/introduction"
   >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+    Integrate PostSyncer with your existing tools and automate your workflow
   </Card>
 </CardGroup>
+
+## Key Features
+
+PostSyncer offers a comprehensive suite of tools to manage your social media presence effectively.
+
+<CardGroup cols={2}>
+  <Card
+    title="Multi-Platform Publishing"
+    icon="share-nodes"
+  >
+    Post to all major social platforms from a single dashboard with customized content for each network
+  </Card>
+  <Card
+    title="Advanced Scheduling"
+    icon="calendar"
+  >
+    Schedule posts for optimal times or create repeating schedules for consistent engagement
+  </Card>
+  <Card
+    title="Content Organization"
+    icon="folder-tree"
+  >
+    Organize your content with campaigns, labels, and workspaces for efficient team collaboration
+  </Card>
+  <Card
+    title="Media Management"
+    icon="photo-film"
+  >
+    Upload, store, and reuse images and videos with platform-specific optimization
+  </Card>
+</CardGroup>
+
+## Supported Platforms
+
+PostSyncer enables you to manage content across all major social media platforms:
+
+<CardGroup cols={3}>
+  <Card title="Twitter / X" icon="twitter" color="#1DA1F2" />
+  <Card title="Facebook" icon="facebook" color="#1877F2" />
+  <Card title="Instagram" icon="instagram" color="#E4405F" />
+  <Card title="TikTok" icon="tiktok" color="#000000" />
+  <Card title="YouTube" icon="youtube" color="#FF0000" />
+  <Card title="Pinterest" icon="pinterest" color="#BD081C" />
+  <Card title="Threads" icon="at" color="#000000" />
+  <Card title="Telegram" icon="telegram" color="#0088cc" />
+  <Card title="LinkedIn" icon="linkedin" color="#0A66C2" />
+  <Card title="Bluesky" icon="cloud" color="#0085FF" />
+</CardGroup>
+
+## Ready to Transform Your Social Media Workflow?
+
+Join thousands of creators, businesses, and agencies who use PostSyncer to streamline their social media management and drive better results.
+
+<Card
+  title="Create Your Account"
+  icon="user-plus"
+  href="https://app.postsyncer.com/register"
+  color="#16A34A"
+>
+  Sign up for free and connect your first social account in minutes
+</Card>
