--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,122 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Getting Started with PostSyncer'
+description: 'Set up your account and start scheduling social media content in minutes'
 ---
 
-## Setup your development
+## Create Your Account
 
-Learn how to update your docs locally and deploy them to the public.
+Getting started with PostSyncer is simple, and you can be up and running in just a few minutes.
 
-### Edit and preview
+<Steps>
+  <Step title="Sign Up">
+    Visit [app.postsyncer.com/register](https://app.postsyncer.com/register) and create your account. You can sign up with your email or use single sign-on with Google.
+  </Step>
+  <Step title="Create Your First Workspace">
+    A workspace helps you organize your social media accounts. Create a workspace for your brand, agency, or client.
+  </Step>
+  <Step title="Connect Social Accounts">
+    Connect your first social media account by authorizing PostSyncer to publish on your behalf. We use official platform APIs to ensure secure connections.
+  </Step>
+</Steps>
+
+## Connect Your Social Platforms
+
+PostSyncer supports all major social media platforms. Click on the "Connect Account" button in your dashboard to add any of these platforms:
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="twitter" title="Twitter / X">
+    Connect your Twitter/X account to schedule tweets, threads, and media posts. We support both text-only tweets and posts with images or videos.
+    
+    **Features:**
+    - Schedule tweets with images, videos, or GIFs
+    - Create and schedule tweet threads
+    - Utilize Twitter cards when sharing links
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
-
-
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
-
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
+  <Accordion icon="facebook" title="Facebook">
+    Connect your Facebook Pages to schedule posts, photos, and videos. Manage multiple pages from one dashboard.
+    
+    **Features:**
+    - Schedule posts to Facebook Pages
+    - Upload and share multiple images or videos
+    - Customize privacy settings for each post
+  </Accordion>
+  <Accordion icon="instagram" title="Instagram">
+    Connect your Instagram Business account to schedule feed posts, carousels, and stories.
+    
+    **Features:**
+    - Schedule feed posts with images or videos
+    - Create multi-image carousel posts
+    - Auto-crop images to Instagram's preferred dimensions
+  </Accordion>
+  <Accordion icon="brands" title="Other Platforms">
+    PostSyncer also supports TikTok, YouTube, Pinterest, Threads, Telegram, LinkedIn, and Bluesky. Each platform has specialized features to ensure your content looks perfect on every network.
+    
+    **Note:** Some platforms may require specific account types (e.g., business accounts) or additional setup steps. Follow the in-app instructions for each platform.
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+## Create Your First Post
 
-<AccordionGroup>
+Now that your accounts are connected, it's time to create your first post.
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+<Steps>
+  <Step title="Navigate to Posts">
+    Click on the "Posts" section in the main navigation.
+  </Step>
+  <Step title="Create New Post">
+    Click the "Create Post" button to open the post editor.
+  </Step>
+  <Step title="Compose Your Content">
+    Write your post content, add media (images/videos), and customize settings for each connected platform.
+  </Step>
+  <Step title="Schedule or Publish">
+    Choose to publish immediately or schedule for a future date and time. You can also set up repeating posts for content that needs to be shared multiple times.
+  </Step>
+</Steps>
 
-</AccordionGroup>
+## Organize Your Content
 
-## Update your docs
+PostSyncer offers several ways to keep your content organized:
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+<CardGroup cols={2}>
+  <Card title="Campaigns" icon="bullhorn">
+    Group related posts into campaigns to track performance across a marketing initiative.
+  </Card>
+  <Card title="Labels" icon="tags">
+    Tag posts with custom labels to categorize content types, themes, or clients.
+  </Card>
+  <Card title="Workspaces" icon="building">
+    Create separate workspaces for different brands, clients, or departments.
+  </Card>
+  <Card title="Content Calendar" icon="calendar-days">
+    Visualize your scheduled content in a calendar view to ensure consistent posting.
+  </Card>
+</CardGroup>
+
+## Next Steps
+
+Now that you've set up your account and created your first post, explore these advanced features:
 
 <CardGroup>
-
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
-
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
-
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
-
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
-
+  <Card
+    title="Team Collaboration"
+    icon="users"
+    href="/essentials/team-collaboration"
+  >
+    Invite team members and set permissions to collaborate on content creation.
+  </Card>
+  <Card
+    title="Content Analytics"
+    icon="chart-line"
+    href="/essentials/analytics"
+  >
+    Track the performance of your posts across all connected platforms.
+  </Card>
+  <Card
+    title="API Integration"
+    icon="code"
+    href="/api-reference/introduction"
+  >
+    Use our API to automate your workflow and integrate with other tools.
+  </Card>
 </CardGroup>
