Fix punctuation in developer support section of documentation for consistency.

--- a/development.mdx
+++ b/development.mdx
@@ -179,6 +179,6 @@ If you encounter any issues or have questions about the API:
     icon="headset"
     href="mailto:support@postsyncer.com"
   >
-    Our developer support team is ready to help
+    Our developer support team is ready to help.
   </Card>
 </CardGroup>
